// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Select when no properties are set matches snapshot 1`] = `null`;

exports[`Select when options are objects with a value property. matches snapshot 1`] = `
<select
  className="tm-select"
  onChange={[Function]}
  value="bar"
>
  <option
    value="foo"
  >
    qux
  </option>
  <option
    value="bar"
  >
    quux
  </option>
  <option
    value="baz"
  >
    corge
  </option>
</select>
`;

exports[`Select when options are strings matches snapshot 1`] = `
<select
  className="tm-select"
  onChange={[Function]}
  value="bar"
>
  <option
    value="foo"
  >
    foo
  </option>
  <option
    value="bar"
  >
    bar
  </option>
  <option
    value="baz"
  >
    baz
  </option>
</select>
`;
